[workspace]
[package]
version = "0.1.0"
name = "tendermint-sp1"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", rev = "v1.0.1" }


serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.37.0", default-features = false }
tendermint-light-client-verifier = { version = "0.37.0", default-features = false, features = [
    "rust-crypto",
] }
[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "v0.9.8" }
ed25519-consensus = { git = "https://github.com/sp1-patches/ed25519-consensus", rev = "78f83b21767077f602f30148e513a52e844abbb6" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "v0.10.8" }

[features]
sp1 = []
